deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: development
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: development
  labels:
    app: my-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
        - name: my-registry-secret
      containers:
        - name: my-app
          image: privateregistry.azurecr.io/my-app:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 500Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 90
            periodSeconds: 10
          imagePullPolicy: Always
      serviceAccountName: default
# kubectl apply -f deployment.yaml
# kubectl logs -f my-app-xxxxxxxxxx-xxxxx --all-containers -n development
